--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       name="description"
       content="Tunjukkan bakat dan kreativitas kamu di berbagai kompetisi seru. Mari bergabung dan nantikan kejutannya!"
     />
-    <link rel="canonical" href="https://cakfest.sga-cakrawala.org/" />
+    <link rel="canonical" href="https://cakfest.sga-cakrawala.org" />
     <title>Student Government Association - Cakrawala University</title>
     <!-- OpenGraph -->
-    <meta property="og:url" content="https://cakfest.sga-cakrawala.org/" />
+    <meta property="og:url" content="https://cakfest.sga-cakrawala.org" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Cakrawala Festival" />
     <meta
@@ -37,7 +37,7 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="cakfest.sga-cakrawala.org" />
-    <meta property="twitter:url" content="https://cakfest.sga-cakrawala.org/" />
+    <meta property="twitter:url" content="https://cakfest.sga-cakrawala.org" />
     <meta name="twitter:title" content="Cakrawala Festival" />
     <meta
       name="twitter:description"
