--- a/index.html
+++ b/index.html
@@ -21,31 +21,37 @@
       content="Tunjukkan bakat dan kreativitas kamu di berbagai kompetisi seru. Mari bergabung dan nantikan kejutannya!"
     />
     <link rel="canonical" href="https://cakfest.sga-cakrawala.org/" />
-    <title>Student Government Association - Cakrawala University</title>
+    <title>Cakrawala Festival</title>
     <!-- OpenGraph -->
     <meta property="og:url" content="https://cakfest.sga-cakrawala.org/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Cakrawala Festival" />
+    <meta
+      property="og:title"
+      content="Cakrawala Festival - Cakrawala University"
+    />
     <meta
       property="og:description"
       content="Tunjukkan bakat dan kreativitas kamu di berbagai kompetisi seru. Mari bergabung dan nantikan kejutannya!"
     />
     <meta
       property="og:image"
-      content="https://ik.imagekit.io/uc4newjdq/assets%20cakfest/assets%20competition/NEW%20LOGO%201.webp?updatedAt=1743277092436"
+      content="https://ik.imagekit.io/uc4newjdq/assets%20cakfest/assets%20competition/Banner.png?updatedAt=1744211153074"
     />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="cakfest.sga-cakrawala.org" />
     <meta property="twitter:url" content="https://cakfest.sga-cakrawala.org/" />
-    <meta name="twitter:title" content="Cakrawala Festival" />
+    <meta
+      name="twitter:title"
+      content="Cakrawala Festival - Cakrawala University"
+    />
     <meta
       name="twitter:description"
       content="Tunjukkan bakat dan kreativitas kamu di berbagai kompetisi seru. Mari bergabung dan nantikan kejutannya!"
     />
     <meta
       property="twitter:image"
-      content="https://ik.imagekit.io/uc4newjdq/assets%20cakfest/assets%20competition/NEW%20LOGO%201.webp?updatedAt=1743277092436"
+      content="https://ik.imagekit.io/uc4newjdq/assets%20cakfest/assets%20competition/Banner.png?updatedAt=1744211153074"
     />
   </head>
 
