--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     />
     <meta
       property="og:image"
-      content="https://ik.imagekit.io/uc4newjdq/assets%20cakfest/assets%20competition/NEW%20LOGO%201.webp?updatedAt=1743277092436"
+      content="https://ik.imagekit.io/uc4newjdq/assets%20cakfest/assets%20competition/Banner.png?updatedAt=1744211153074"
     />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -45,7 +45,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://ik.imagekit.io/uc4newjdq/assets%20cakfest/assets%20competition/NEW%20LOGO%201.webp?updatedAt=1743277092436"
+      content="https://ik.imagekit.io/uc4newjdq/assets%20cakfest/assets%20competition/Banner.png?updatedAt=1744211153074"
     />
   </head>
 
