--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cakrawala Festival</title>
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
     <!-- Base -->
     <meta
       name="description"
