--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     />
   </head>
 
-  <body>
+  <body class="bg-[#571265]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
